# cg-shop

./: CMakeLists.txt  README.md  plot.py
examples/: fpg-poly_0000000060_h1.json  fpg-poly_0000000070_h1.json  fpg-poly_0000000300_h5.json  fpg-poly_0000001800_h4.json  fpg-poly_0000007000_h8.json  fpg-poly_0000050000_h9.json  srpg_iso_aligned_mc0000172.json  srpg_iso_aligned_mc0001590.json  srpg_iso_aligned_mc0003585.json  srpg_iso_aligned_mc0009661.json  srpg_iso_aligned_mc0039989.json  srpg_iso_mc0013808.json  srpg_mc0000579.json  srpg_mc0000908.json  srpg_mc0003188.json  srpg_mc0024348.json  srpg_octa_mc0018033.json  srpg_octa_mc0097624.json  srpg_smo_mc0067537.json  srpg_smr_mc0106093.json
src/: common.cpp  common.hpp  main.cpp  naive.cpp  naive.hpp
